--- a/section_10/faca_voce_mesmo_10.ipynb
+++ b/section_10/faca_voce_mesmo_10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 166,
    "id": "2b6a95e0-4598-4476-a9f7-c95f1b98f03c",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[df['Umidade'] == 200] = 89.76"
+    "df.loc[df['Umidade'] == 200, ] = 89.76"
    ]
   },
   {
