fix: ajustando linhas do código

--- a/section_10/faca_voce_mesmo_10.ipynb
+++ b/section_10/faca_voce_mesmo_10.ipynb
@@ -597,11 +597,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a7c28095-4e56-4d16-b252-f0234d667dcb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Aparencia      0\n",
+       "Temperatura    0\n",
+       "Umidade        0\n",
+       "Vento          0\n",
+       "Jogar          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
