--- a/section_10/faca_voce_mesmo_10.ipynb
+++ b/section_10/faca_voce_mesmo_10.ipynb
@@ -587,39 +587,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "4a7f669a-258c-4cb3-9230-9200b625d483",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['Umidade'] = df['Umidade'].round(2)\n",
     "df.loc[df['Umidade'] == 89.77, 'Umidade'] = 70"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "a7c28095-4e56-4d16-b252-f0234d667dcb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aparencia</th>\n",
+       "      <th>Temperatura</th>\n",
+       "      <th>Umidade</th>\n",
+       "      <th>Vento</th>\n",
+       "      <th>Jogar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sol</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>FALSO</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sol</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>VERDADEIRO</td>\n",
+       "      <td>nao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nublado</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>FALSO</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>chuva</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>FALSO</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>chuva</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>FALSO</td>\n",
+       "      <td>sim</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Aparencia      0\n",
-       "Temperatura    0\n",
-       "Umidade        0\n",
-       "Vento          0\n",
-       "Jogar          0\n",
-       "dtype: int64"
+       "  Aparencia  Temperatura  Umidade       Vento Jogar\n",
+       "0       sol         85.0     85.0       FALSO   nao\n",
+       "1       sol         80.0     90.0  VERDADEIRO   nao\n",
+       "2   nublado         83.0     86.0       FALSO   sim\n",
+       "3     chuva         70.0     70.0       FALSO   sim\n",
+       "4     chuva         68.0     80.0       FALSO   sim"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c7018f-b1d5-4e79-86d8-697448978654",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
